--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Lefa's Portfolio</title>
     <link rel = 'stylesheet' type="text/css" href="styles.css">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
     <header>
@@ -19,6 +20,10 @@
                     <ul><a href = '#'>Skills</a></ul>
                     <ul><a href = '#'>Projects</a></ul>
                     <ul><a href = '#'>Contact Me</a></ul>
+                </ul>
+                <div class = 'menu-btn'>
+                    <i class = 'fas fa-bars'></i>
+                </div>
             </div>
         </nav>
 <!-- Home Page styling -->
@@ -106,5 +111,6 @@
 
     <footer>
     </footer>
+    <script src='script.js'></script>
 </body>
 </html>
