finished with nav bar and home

--- a/index.html
+++ b/index.html
@@ -33,15 +33,18 @@
             <div class = 'text-1'> Hello, my name is</div>
             <div class = 'text-2'> Lefa Mokgatle </div>
             <div class = 'text-3'> The <span>Web Developer</span> You Need </div>
+            <a href ='#'>Hire Me</a>
         </div>
     </div>
 </section>
 
     </header>
-
+<!-- About section styling -->
     <main>
-        <div class = 'about'>
-            <h2>Hi, My Name Is Lefa Mokgatle</h2>
+    <section class ='about' id='about'>
+        <div class = 'max-width'>
+            <h2 class = 'title'>Hi, My Name Is Lefa Mokgatle</h2>
+        <div class = 'about-content'>
                 <p>I am 24 years of age and grew up in Johannesburg, South Africa. I graduated from AFDA in 2019 for a Bcom degree in Business Innovation and Technology. The different technologies we were exposed taught me and showed me the real need Africa has programmers and drivers of innovation. Which is how I decided to take the deep dive in learning Javascript and fortunately enough while learning managed to get into the amazin Umuzi programme which will definetly shape me into a great programmer.</p>
         </div>
         <div class = 'skills'>
@@ -107,6 +110,7 @@
                 <input type="text">
             </form>
         </div>    
+    </section>
     </main>
 
     <footer>
