still busy on the about me section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
+
 <body>
     <header>
         <nav class ='navbar'>
@@ -26,27 +27,46 @@
                 </div>
             </div>
         </nav>
-<!-- Home Page styling -->
-<section class = 'home' id ='home'>
-    <div class = 'max-width'>
-        <div class= 'home-content'>
-            <div class = 'text-1'> Hello, my name is</div>
-            <div class = 'text-2'> Lefa Mokgatle </div>
-            <div class = 'text-3'> The <span>Web Developer</span> You Need </div>
-            <a href ='#'>Hire Me</a>
-        </div>
-    </div>
-</section>
 
+<!-- Home Page styling -->
+
+        <section class = 'home' id ='home'>
+            <div class = 'max-width'>
+                <div class= 'home-content'>
+                    <div class = 'text-1'> Hello, my name is</div>
+                    <div class = 'text-2'> Lefa Mokgatle </div>
+                    <div class = 'text-3'> The <span>Web Developer</span> You Need </div>
+                    <a href ='#'>Hire Me</a>
+                </div>
+            </div>
+        </section>
     </header>
+
 <!-- About section styling -->
+
     <main>
-    <section class ='about' id='about'>
+        <section class = 'about' id ='home'>
+            <div class = 'max-width'>
+                <h2 class ='title'>About Me</h2>
+                <div class= 'about-content'>
+                    <div class = 'column-left'>
+                        <img src ='images/laptop.jpg' alt="laptop picture">
+                    </div>
+                    <div class ='column-right'>
+                        <div class='text'>Hi, My Name Is <span>Lefa Mokgatle</span></div>
+                        <p>I am 24 years of age and grew up in Johannesburg, South Africa. I graduated from AFDA in 2019 with a Bcom degree in Business Innovation and Technology. The different technologies we were exposed taught me and showed me the real need Africa has for programmers and drivers of innovation. Which is why I decided to take the deep dive in learning Javascript and fortunately enough while learning managed to get into the amazing Umuzi programme which will definetly shape me into a great programmer.</p>
+                        <a href ='#'>Download CV</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+<!-- 
         <div class = 'max-width'>
-            <h2 class = 'title'>Hi, My Name Is Lefa Mokgatle</h2>
-        <div class = 'about-content'>
+            <h2>Hi, My Name Is Lefa Mokgatle</h2>
+        <div>
                 <p>I am 24 years of age and grew up in Johannesburg, South Africa. I graduated from AFDA in 2019 for a Bcom degree in Business Innovation and Technology. The different technologies we were exposed taught me and showed me the real need Africa has programmers and drivers of innovation. Which is how I decided to take the deep dive in learning Javascript and fortunately enough while learning managed to get into the amazin Umuzi programme which will definetly shape me into a great programmer.</p>
-        </div>
+        </div> -->
         <div class = 'skills'>
             <h3>Skills</h3>
         </div>
@@ -110,7 +130,6 @@
                 <input type="text">
             </form>
         </div>    
-    </section>
     </main>
 
     <footer>
