skills section complete with some errors

--- a/index.html
+++ b/index.html
@@ -61,32 +61,56 @@
             </div>
         </section>
 
-<!-- 
-        <div class = 'max-width'>
-            <h2>Hi, My Name Is Lefa Mokgatle</h2>
-        <div>
-                <p>I am 24 years of age and grew up in Johannesburg, South Africa. I graduated from AFDA in 2019 for a Bcom degree in Business Innovation and Technology. The different technologies we were exposed taught me and showed me the real need Africa has programmers and drivers of innovation. Which is how I decided to take the deep dive in learning Javascript and fortunately enough while learning managed to get into the amazin Umuzi programme which will definetly shape me into a great programmer.</p>
-        </div> -->
-        <div class = 'skills'>
-            <h3>Skills</h3>
-        </div>
-        <div class = 'list'>
-                <div>
-                <ul>HTML</ul>
-                <ul>CSS</ul>
-                <ul>Javascript</ul>
-                <ul>Business Leadership</ul>
-                <ul>Microsoft Word</ul>
+<!-- Skills section -->
+        <section class = 'skills' id ='skills'>
+            <div class='max-width'>
+                <h2 class='title'>My Skills</h2>
+                <div class ='skills-content'>
+                    <div class='column-left'>
+                        <div class='text'>My Creative Skills.</div>
+                        <p>The degree I obtained came with many other skills that add to the quality of work I can provide. The skills branch outside of the technical and enter into the business realm. With this in mind I am highly proficient in business leadership, business planning, strategy development and social media marketing among other things.</p>
+                    </div>
+                    <div class='column-right'>
+                        <div class='bars'>
+                            <div class='info'>
+                                <span>html</span>
+                                <span>70%</span>
+                            </div> 
+                            <div class="line html"></div>
+                        </div>
+                        <div class='bars'>
+                            <div class='info'>
+                                <span>css</span>
+                                <span>65%</span>
+                            </div> 
+                            <div class="line css"></div>
+                        </div>
+                        <div class='bars'>
+                            <div class='info'>
+                                <span>Javascript</span>
+                                <span>40%</span>
+                            </div> 
+                            <div class="line js"></div>
+                        </div>
+                        <div class='bars'>
+                            <div class='info'>
+                                <span>Microsoft Powerpoint</span>
+                                <span>90%</span>
+                            </div> 
+                            <div class="line power"></div>
+                        </div>
+                        <div class='bars'>
+                            <div class='info'>
+                                <span>Microsoft Excel</span>
+                                <span>80%</span>
+                            </div> 
+                            <div class="line excel"></div>
+                        </div>
+                    </div>
                 </div>
+            </div>
+        </section>
 
-                <div>
-                <ul>Microsoft Excel</ul>
-                <ul>Microsoft Powerpoint</ul>
-                <ul>Business Planning</ul>
-                <ul>Social Media Marketing</ul>
-                <ul>Business Development</ul>
-                </div>
-        </div>
         <!-- <div class = 'interests'>
             <h3>Interests</h3>
         </div> -->
