added projects with links to webpage

--- a/index.html
+++ b/index.html
@@ -111,6 +111,45 @@
             </div>
         </section>
 
+
+        <!-- projects section -->
+
+        <section class="teams" id="teams">
+            <div class="max-width">
+                <h2 class="title">My teams</h2>
+                <div class="carousel owl-carousel">
+                    <div class="card">
+                        <div class="box">
+                            <img src="images/social-proof.PNG" alt="">
+                            <div class="text">Social Proof </div>
+                            <p><a href = 'https://mokgatle97.github.io/social-proof/'></a></p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="box">
+                            <img src="images/dark-theme.PNG" alt="">
+                            <div class="text">Dark Theme</div>
+                            <p><a href = 'https://mokgatle97.github.io/dark-theme-landing-page/'></a></p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="box">
+                            <img src="images/clipboard-landing.PNG" alt="">
+                            <div class="text">Clipboard Landing Page</div>
+                            <p><a href ='https://mokgatle97.github.io/clipboard-landing-page/'></a></p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="box">
+                            <img src="images/order-summary.PNG" alt="">
+                            <div class="text">Order Summary</div>
+                            <p><a href = 'https://mokgatle97.github.io/order-summary/'></a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- <div class = 'interests'>
             <h3>Interests</h3>
         </div> -->
@@ -143,10 +182,7 @@
             <p>Family owned business (July 2018 to Present)</p>
             </div>
         </div>
-        <div class = 'projects'>
-            <h3>Projects</h3>
-            <p>Unfortunately I have no projects yet. But will have some very soon.</p>
-        </div>
+
         <div class = 'Contact Me'>
             <h3>Contact</h3>
             <p>Feel Free To Drop Me An Email</p>
