changes made on the projects page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel = 'stylesheet' type="text/css" href="styles.css">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+
 </head>
 
 <body>
@@ -114,36 +118,36 @@
 
         <!-- projects section -->
 
-        <section class="teams" id="teams">
+        <section class="projects" id="projects">
             <div class="max-width">
-                <h2 class="title">My teams</h2>
+                <h2 class="title">My Projects</h2>
                 <div class="carousel owl-carousel">
                     <div class="card">
                         <div class="box">
                             <img src="images/social-proof.PNG" alt="">
                             <div class="text">Social Proof </div>
-                            <p><a href = 'https://mokgatle97.github.io/social-proof/'></a></p>
+                            <a href = 'https://mokgatle97.github.io/social-proof/'></a>
                         </div>
                     </div>
                     <div class="card">
                         <div class="box">
                             <img src="images/dark-theme.PNG" alt="">
                             <div class="text">Dark Theme</div>
-                            <p><a href = 'https://mokgatle97.github.io/dark-theme-landing-page/'></a></p>
+                            <a href = 'https://mokgatle97.github.io/dark-theme-landing-page/'></a>
                         </div>
                     </div>
                     <div class="card">
                         <div class="box">
                             <img src="images/clipboard-landing.PNG" alt="">
                             <div class="text">Clipboard Landing Page</div>
-                            <p><a href ='https://mokgatle97.github.io/clipboard-landing-page/'></a></p>
+                            <a href ='https://mokgatle97.github.io/clipboard-landing-page/'></a>
                         </div>
                     </div>
                     <div class="card">
                         <div class="box">
                             <img src="images/order-summary.PNG" alt="">
                             <div class="text">Order Summary</div>
-                            <p><a href = 'https://mokgatle97.github.io/order-summary/'></a></p>
+                            <a href = 'https://mokgatle97.github.io/order-summary/'></a>
                         </div>
                     </div>
                 </div>
