--- a/index.html
+++ b/index.html
@@ -115,7 +115,6 @@
             </div>
         </section>
 
-
         <!-- projects section -->
 
         <section class="projects" id="projects">
@@ -124,76 +123,89 @@
                 <div class="carousel owl-carousel">
                     <div class="card">
                         <div class="box">
-                            <img src="images/social-proof.PNG" alt="">
-                            <div class="text">Social Proof </div>
-                            <a href = 'https://mokgatle97.github.io/social-proof/'></a>
+                            <a href = 'https://mokgatle97.github.io/social-proof/'><img src="images/social-proof.PNG" alt=""></a>
+                            <div class="text">Social Proof Landing Page </div>
                         </div>
                     </div>
                     <div class="card">
                         <div class="box">
-                            <img src="images/dark-theme.PNG" alt="">
-                            <div class="text">Dark Theme</div>
-                            <a href = 'https://mokgatle97.github.io/dark-theme-landing-page/'></a>
+                            <a href = 'https://mokgatle97.github.io/dark-theme-landing-page/'><img src="images/dark-theme.PNG" alt=""></a>
+                            <div class="text">Dark Theme Landing Page</div>
                         </div>
                     </div>
                     <div class="card">
                         <div class="box">
-                            <img src="images/clipboard-landing.PNG" alt="">
+                            <a href ='https://mokgatle97.github.io/clipboard-landing-page/'><img src="images/clipboard-landing.PNG" alt=""></a>
                             <div class="text">Clipboard Landing Page</div>
-                            <a href ='https://mokgatle97.github.io/clipboard-landing-page/'></a>
                         </div>
                     </div>
                     <div class="card">
                         <div class="box">
-                            <img src="images/order-summary.PNG" alt="">
-                            <div class="text">Order Summary</div>
-                            <a href = 'https://mokgatle97.github.io/order-summary/'></a>
+                            <a href = 'https://mokgatle97.github.io/order-summary/'><img src="images/order-summary.PNG" alt=""></a>
+                            <div class="text">Order Summary Card</div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- <div class = 'interests'>
-            <h3>Interests</h3>
-        </div> -->
-        <div class = 'experience'>
-            <h3>Previous Experience</h3>
-        </div>
-        <div class = 'job_list'>
-            <div>
-            <ul>In-Field Marketing Promoter & Sales</ul>
-            <p>Plush Fragrances (March 2016 - Aug 2016)</p>
+<!-- contact section start -->
+        <section class="contact" id="contact">
+            <div class="max-width">
+                <h2 class="title">Contact me</h2>
+                <div class="contact-content">
+                    <div class="column left">
+                        <div class="text">Get in Touch</div>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos harum corporis fuga corrupti. Doloribus quis soluta nesciunt veritatis vitae nobis?</p>
+                        <div class="icons">
+                            <div class="row">
+                                <i class="fas fa-user"></i>
+                                <div class="info">
+                                    <div class="head">Name</div>
+                                    <div class="sub-title">Prakash Shahi</div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <i class="fas fa-map-marker-alt"></i>
+                                <div class="info">
+                                    <div class="head">Address</div>
+                                    <div class="sub-title">Surkhet, Nepal</div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <i class="fas fa-envelope"></i>
+                                <div class="info">
+                                    <div class="head">Email</div>
+                                    <div class="sub-title">abc@gmail.com</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column right">
+                        <div class="text">Message me</div>
+                        <form action="#">
+                            <div class="fields">
+                                <div class="field name">
+                                    <input type="text" placeholder="Name" required>
+                                </div>
+                                <div class="field email">
+                                    <input type="email" placeholder="Email" required>
+                                </div>
+                            </div>
+                            <div class="field">
+                                <input type="text" placeholder="Subject" required>
+                            </div>
+                            <div class="field textarea">
+                                <textarea cols="30" rows="10" placeholder="Message.." required></textarea>
+                            </div>
+                            <div class="button-area">
+                                <button type="submit">Send message</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
-
-            <div>
-            <ul>Road Manager</ul>
-            <p>VTH Legacy (Oct 2016 - Dec 2016)</p>
-            </div>
-
-            <div>
-            <ul>Artist Management</ul>
-            <p>Mansa Note (Feb 2017 - July 2017)</p>
-            </div>
-
-            <div>
-            <ul>Business Administration</ul>
-            <p>Lister Medical Building (2014 to May 2018)</p>
-            </div>
-
-            <div>
-            <ul>Managing Director Of Mokgatle Enterprises</ul>
-            <p>Family owned business (July 2018 to Present)</p>
-            </div>
-        </div>
-
-        <div class = 'Contact Me'>
-            <h3>Contact</h3>
-            <p>Feel Free To Drop Me An Email</p>
-            <form>
-                <input type="text">
-            </form>
-        </div>    
+        </section>   
     </main>
 
     <footer>
