--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lefa's Portfolio</title>
     <link rel = 'stylesheet' type="text/css" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
@@ -152,31 +153,45 @@
 <!-- contact section start -->
         <section class="contact" id="contact">
             <div class="max-width">
-                <h2 class="title">Contact me</h2>
+                <h2 class="title">Contact Me</h2>
                 <div class="contact-content">
                     <div class="column left">
                         <div class="text">Get in Touch</div>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos harum corporis fuga corrupti. Doloribus quis soluta nesciunt veritatis vitae nobis?</p>
+                        <p>If you would like to get in touch with me make sure to fill out the form below. Or follow me on my socials below.</p>
                         <div class="icons">
                             <div class="row">
                                 <i class="fas fa-user"></i>
                                 <div class="info">
                                     <div class="head">Name</div>
-                                    <div class="sub-title">Prakash Shahi</div>
+                                    <div class="sub-title">Lefa Mokgatle</div>
                                 </div>
                             </div>
                             <div class="row">
                                 <i class="fas fa-map-marker-alt"></i>
                                 <div class="info">
                                     <div class="head">Address</div>
-                                    <div class="sub-title">Surkhet, Nepal</div>
+                                    <div class="sub-title">Johannesburg, South Africa</div>
                                 </div>
                             </div>
                             <div class="row">
                                 <i class="fas fa-envelope"></i>
                                 <div class="info">
                                     <div class="head">Email</div>
-                                    <div class="sub-title">abc@gmail.com</div>
+                                    <div class="sub-title">mokgatlelefa@gmail.com</div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <i class="fab fa-twitter"></i>
+                                <div class="info">
+                                    <div class="head">Twitter</div>
+                                    <div class="sub-title">@MrL_Mokgatle</div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <i class="fab fa-github"></i>
+                                <div class="info">
+                                    <div class="head">Github</div>
+                                    <div class="sub-title">mokgatle97</div>
                                 </div>
                             </div>
                         </div>
